# newprojectverdiepingSOD

./: CMakeLists.txt  README.md
data/: .gitkeep
include/: Game.hpp  Storage.hpp  Utils.hpp
scripts/: apply_macos_icon.sh
src/: Game.cpp  Storage.cpp  Utils.cpp  main.cpp
